# funsat

./: LICENSE  Main.hs  README  funsat-lang.cabal  funsat.cabal  narradar-funsat-lang.cabal
src/Funsat/: Circuit.hs  ECircuit.hs  Impl.hs  Solver.hs  Types.hs  Utils.hs
src/Funsat/Types/: Internal.hs
tests/: Properties.hs
