Name:                narradar-funsat-lang
Version:             0.8
Cabal-Version:       >= 1.2
Description:
    Fork of the circuit language and CNF representation in Funsat (Denis Bueno),
    with the goal of making the representation more easily extendable.
    

Synopsis:            A language for representing boolean circuits
Homepage:            http://github.com/jiborra/funsat-lang
Category:            Algorithms
Stability:           beta
License:             BSD3
License-file:        LICENSE
Author:              Denis Bueno, Jose Iborra
Maintainer:          Jose Iborra <pepeiborra@gmail.com>
Build-type:          Simple

Library
 Exposed-modules:     Funsat.Circuit
                      Funsat.ECircuit
                      Funsat.Types


 Other-modules:
 Ghc-options:         -funbox-strict-fields
                      -Wall -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 Extensions:          CPP, ScopedTypeVariables, PatternGuards
 Hs-source-dirs:      src
 Build-Depends:       base,
                      containers,
                      pretty,
                      mtl,
                      array,
                      QuickCheck,
                      bimap >= 0.2 && < 0.3,
                      fgl,
                      split,
                      ghc-prim
